[BUGFIX] Button text is hardly readable
This is caused by the color of the text being inherited in CSS.
However due to row highlighting, the color is set to white and
has a side-effect on the button itself.

Resolves: #72245
Reviewed-on: https://review.typo3.org/45311
Tested-by: Xavier Perseguers <xavier@typo3.org>

--- a/Resources/Public/Styles/styles.css
+++ b/Resources/Public/Styles/styles.css
@@ -88,7 +88,7 @@ textarea {
 }
 
 button {
-    color: #000;
+    color: #000 !important;
     width: 10em;
 }
 
